--- a/src/ui/feature/post/PostComment.pug
+++ b/src/ui/feature/post/PostComment.pug
@@ -67,6 +67,7 @@ style.
 	:global(.comment > .md)
 		max-width 390px
 	:global(.comment > .md img)
+		margin-top 4px
 		max-height 60px
 		width auto
 	:global(.comment-deleted > .md)
