--- a/src/ui/feature/subreddit/SubredditPage.pug
+++ b/src/ui/feature/subreddit/SubredditPage.pug
@@ -18,7 +18,6 @@ script.
 	export posts_sort = null
 	
 	export post_short_id = null
-	export comment_context = null
 	export comment_short_id = null
 	export comments_sort = null
 
@@ -54,7 +53,7 @@ CenterLayout
 				PostsList(type='subreddit' subreddit_name={subreddit_name} posts_sort={posts_sort} selected_post_short_id={post_short_id})
 		{#if post_short_id}
 			{#key post_short_id}
-				Post(short_id={post_short_id} focus_comment_context_level={comment_context} focus_comment_short_id={comment_short_id} comments_sort={comments_sort})
+				Post(comments_sort={comments_sort} focus_comment_short_id={comment_short_id} short_id={post_short_id})
 		{:else}
 			SubredditInfo(name={subreddit_name})
 			{#if widgets}
