--- a/src/ui/app/routing/AppRouter.pug
+++ b/src/ui/app/routing/AppRouter.pug
@@ -99,16 +99,16 @@ script.
 		AppThemeColorContext
 			AppNetworkStatusContext
 				{#if route.format === 'collection'}
-					CollectionPage(collection_short_id={route.listing.collection_short_id} comment_context={route.selection.comment_context} comment_short_id={route.selection.comment_short_id} comments_sort={route.selection.comments_sort} post_short_id={route.selection.post_short_id})
+					CollectionPage(collection_short_id={route.listing.collection_short_id} comment_short_id={route.selection.comment_short_id} comments_sort={route.selection.comments_sort} post_short_id={route.selection.post_short_id})
 				{:else if route.format === 'listings'}
 					ListingsPage(type={route.listings_type})
 				{:else if route.format === 'multireddit'}
-					MultiredditPage(multireddit_name={route.listing.multireddit_name} user_name={route.listing.user_name} posts_sort={route.listing.posts_sort} comment_context={route.selection.comment_context} comment_short_id={route.selection.comment_short_id} comments_sort={route.selection.comments_sort} post_short_id={route.selection.post_short_id})
+					MultiredditPage(multireddit_name={route.listing.multireddit_name} user_name={route.listing.user_name} posts_sort={route.listing.posts_sort} comment_short_id={route.selection.comment_short_id} comments_sort={route.selection.comments_sort} post_short_id={route.selection.post_short_id})
 				{:else if route.format === 'subreddit'}
 					{#key route.listing.subreddit_name}
-						SubredditPage(subreddit_name={route.listing.subreddit_name} posts_sort={route.listing.posts_sort} comment_context={route.selection.comment_context} comment_short_id={route.selection.comment_short_id} comments_sort={route.selection.comments_sort} post_short_id={route.selection.post_short_id})
+						SubredditPage(subreddit_name={route.listing.subreddit_name} posts_sort={route.listing.posts_sort} comment_short_id={route.selection.comment_short_id} comments_sort={route.selection.comments_sort} post_short_id={route.selection.post_short_id})
 				{:else if route.format === 'user'}
-					UserPage(user_name={route.listing.user_name} posts_sort={route.listing.posts_sort} comment_context={route.selection.comment_context} comment_short_id={route.selection.comment_short_id} comments_sort={route.selection.comments_sort} post_short_id={route.selection.post_short_id})
+					UserPage(user_name={route.listing.user_name} posts_sort={route.listing.posts_sort} comment_short_id={route.selection.comment_short_id} comments_sort={route.selection.comments_sort} post_short_id={route.selection.post_short_id})
 				{:else if route.format === 'wiki'}
 					{#key route.listing.subreddit_name}
 						{#key route.selection.wikipage_name}
