--- a/src/ui/feature/collection/CollectionPage.pug
+++ b/src/ui/feature/collection/CollectionPage.pug
@@ -7,7 +7,6 @@ script.
 	export collection_short_id = null
 	
 	export post_short_id = null
-	export comment_context = null
 	export comment_short_id = null
 	export comments_sort = null
 
@@ -20,7 +19,7 @@ SplitLayout
 	svelte:fragment(slot='right')
 		{#if post_short_id}
 			{#key post_short_id}
-				Post(short_id={post_short_id} focus_comment_context_level={comment_context} focus_comment_short_id={comment_short_id} comments_sort={comments_sort})
+				Post(comments_sort={comments_sort} focus_comment_short_id={comment_short_id} short_id={post_short_id} )
 		{:else}
 			p [Collection info goes here.]
 
