--- a/src/ui/feature/user/UserAvatar.pug
+++ b/src/ui/feature/user/UserAvatar.pug
@@ -56,6 +56,7 @@ style.
 		text-align center
 	.user-avatar-badge
 		bottom -9px
+		cursor help
 		font-size 18px
 		font-weight 900
 		line-height 1
