--- a/src/ui/common/Popup.pug
+++ b/src/ui/common/Popup.pug
@@ -45,7 +45,7 @@ style.
 	.popup-content-body
 		padding 1em
 	.popup-content-header
-		background var(--c-tint-normal)
+		background var(--c-blend-normal)
 		display flex
 		justify-content space-between
 		padding 1em
