--- a/src/ui/feature/listing/Listing.pug
+++ b/src/ui/feature/listing/Listing.pug
@@ -186,7 +186,7 @@ style.
 	.listing-actions
 		display flex
 	.listing-content
-		background var(--c-tint-normal)
+		background var(--c-blend-normal)
 		border-radius 10px
 		flex 1
 		overflow auto
