--- a/src/ui/feature/post/PostInfoCard.pug
+++ b/src/ui/feature/post/PostInfoCard.pug
@@ -59,7 +59,7 @@ style.
 		gap 6px
 	.post-info-card
 		align-items flex-start
-		background var(--c-tint-normal)
+		background var(--c-blend-normal)
 		border-radius 10px
 		display flex
 		flex-flow column nowrap
