--- a/src/ui/feature/subreddit/SubredditWidget.pug
+++ b/src/ui/feature/subreddit/SubredditWidget.pug
@@ -3,7 +3,7 @@ script.
 	import TextHTML from '../../common/TextHTML.pug'
 
 	import PostFlair from '../post/PostFlair.pug'
-	import SubredditAvatar from './SubredditAvatar.pug'
+	import SubredditTag from './SubredditTag.pug'
 
 	export widget = null
 
@@ -17,9 +17,7 @@ script.
 		header.subreddit-widget-title {widget.shortName}
 		ol.subreddit-widget-related-subreddits
 			{#each widget.data as subreddit}
-				a.subreddit-widget-related-subreddit(href='/{subreddit.name}')
-					SubredditAvatar(icon_url={subreddit.communityIcon} name={subreddit.name})
-					| {subreddit.name}
+				SubredditTag(name={subreddit.name})
 	{:else if widget.kind === 'image'}
 		{@const image = widget.data[0]}
 			{#if image.linkUrl}
@@ -51,10 +49,6 @@ style.
 		flex-flow row wrap
 		gap 10px
 		padding 0
-	.subreddit-widget-related-subreddit
-		align-items center
-		display flex
-		gap 1em
 	.subreddit-widget-related-subreddits
 		display flex
 		flex-flow column nowrap
